# v3.0.0

* Added define_model for tests
* Added validate_numericality_of matcher
* Added validate_presence_of matcher
* Added validate_length_of matcher